hphp/hack/test/typecheck/classname/array_literal_bad.php.like_types.exp
File "array_literal_bad.php", line 10, characters 3-15:
  array<string, classname<(exact C1 | exact C2 | exact D)>>
File "array_literal_bad.php", line 11, characters 10-13:
Invalid return type (Typing[4110])
File "array_literal_bad.php", line 8, characters 28-54:
Expected ~array<string, classname<I>> because it is an unenforceable type
File "array_literal_bad.php", line 9, characters 10-76:
But got array<string, classname<(C1 | C2 | D)>>
